--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
-
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     height: 100vh;
 }
 
-.container{
+.container {
     display: flex;
     justify-content: center;
     flex-direction: column;
 
 }
 
-#nav-wrapper{
+#nav-wrapper {
     width: 100%;
     height: 3rem;
     background-color: white;
@@ -24,50 +24,51 @@ body{
     margin-right: 3rem;
     margin-right: 3rem;
 }
+
 /* For site-name */
-#nav-wrapper span{
+#nav-wrapper span {
     color: black;
-    padding-left:.8rem;
+    padding-left: .8rem;
     padding-top: 25px;
     margin-left: 4rem;
-    
+
 }
 
 
 /* For menu-bars */
-.fa-bars{
+.fa-bars {
     color: black;
-    padding-right:2rem;
+    padding-right: 2rem;
     padding-top: 25px;
     margin-right: 4rem;
 }
 
-.hero-section{
+.hero-section {
     width: 450px;
     height: 12rem;
     margin-top: 7rem;
     background-color: white;
     display: block;
     margin-left: auto;
-    margin-right: auto; 
+    margin-right: auto;
     position: relative;
 }
 
-.hero-section .intro{
+.hero-section .intro {
     display: block;
-    width:500px;
+    width: 500px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     position: relative;
-   
+
 }
 
-.hero-section .skillz{
+.hero-section .skillz {
     background-color: aqua;
     width: 500px;
     height: 2rem;
-    margin-left:12px;
+    margin-left: 12px;
     margin-right: auto;
     text-align: center;
     padding-left: 20px;
@@ -75,7 +76,8 @@ body{
     margin-top: 10px;
 }
 
-.hero-section .skillz span, .intro span{
+.hero-section .skillz span,
+.intro span {
     font-size: 20px bold;
     margin-left: 17rem;
 }
@@ -84,11 +86,11 @@ body{
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1; 
+    z-index: 1;
 }
 
 
-.profile-picture img{
+.profile-picture img {
 
     width: 200px;
     height: 250px;
@@ -100,14 +102,15 @@ body{
     left: 0;
     float: left;
     margin-top: 0;
-    
+
 }
 
 .content-section {
     width: 800px;
     display: flex;
     justify-content: center;
-    margin-top: 50vh; /* Adjust this value for vertical centering */
+    margin-top: 50vh;
+    /* Adjust this value for vertical centering */
     color: white;
     background-image: url(images/component2.png);
     background-repeat: no-repeat;
@@ -115,8 +118,7 @@ body{
     background-color: black;
 }
 
-.content-section .info{
-    
+.content-section .info {
     display: block;
     width: 450px;
     margin-left: auto;
@@ -126,17 +128,15 @@ body{
 
 
 /* For Mobile Portrait View */
-@media screen and (max-device-width: 480px) 
-{
-    #nav-wrapper
-    {
+@media screen and (max-device-width: 480px) {
+    #nav-wrapper {
         width: 100%;
         display: flex;
-        padding-left:.1rem;
-        margin: 0; 
+        padding-left: .1rem;
+        margin: 0;
     }
 
-    .hero-section{
+    .hero-section {
         width: 100%;
         height: 15rem;
         display: block;
@@ -146,27 +146,27 @@ body{
         padding-top: 40px;
     }
 
-    .profile-picture img{
+    .profile-picture img {
         width: 230px;
         height: 230px;
         padding: 10px;
 
-    
+
     }
 
-    .hero-section .skillz{
+    .hero-section .skillz {
         width: 90%;
         height: 12rem;
-        top:50px;
+        top: 50px;
         margin-left: 1rem;
         height: 2rem;
         padding: .2rem;
-       
-        
+
+
     }
 
-    .content-section .content-section-info{
-        width:100%;
+    .content-section .content-section-info {
+        width: 100%;
         gap: 10px;
         flex-wrap: wrap;
         height: fit-content;
